feat(dockerfile): 学习RUN命令

--- a/dockerfiles/dockerfile/syntax/04_cmd/Dockerfile
+++ b/dockerfiles/dockerfile/syntax/04_cmd/Dockerfile
@@ -1,3 +1,6 @@
-FROM --platform=windows/amd64 busybox
+FROM busybox
 
-RUN echo "abc"
+CMD echo cmd1
+CMD echo cmd2
+# 如果有多个CMD指令，只有最后一条命令会生效
+CMD echo cmd3
