feat(dockerfile-label): LABEL命令的使用

--- a/dockerfiles/dockerfile/syntax/04_cmd/Dockerfile
+++ b/dockerfiles/dockerfile/syntax/04_cmd/Dockerfile
@@ -1,6 +1,13 @@
 FROM busybox
 
-CMD echo cmd1
-CMD echo cmd2
-# 如果有多个CMD指令，只有最后一条命令会生效
-CMD echo cmd3
+ENV NAME=DAVID
+LABEL K1=V1 K2=V2 K3=V3
+LABEL kk1=vv1 \
+      kk2=vv2
+
+# 这种写法也会直接解析变量
+LABEL NAME1=$NAME
+# 双引号可以正常解析环境变量
+LABEL NAME2="$NAME"
+# 单引号则不会解析环境变量，而是会当成一个普通的字符串
+LABEL NAME3='$NAME'
