feat(docker): 更新go的版本

--- a/dockerfiles/develop-env/centos7/Dockerfile
+++ b/dockerfiles/develop-env/centos7/Dockerfile
@@ -57,11 +57,11 @@ WORKDIR /opt
 # golang环境
 ENV GOLANGVERSION=1.19.3
 #COPY go1.19.3.linux-amd64.tar.gz go1.19.3.linux-amd64.tar.gz
-RUN wget https://go.dev/dl/go${GOLANGVERSION}.linux-amd64.tar.gz && \
-    mkdir go${GOLANGVERSION} &&  \
-    tar -zxf go${GOLANGVERSION}.linux-amd64.tar.gz -C go${GOLANGVERSION} && \
-    rm -f go${GOLANGVERSION}.linux-amd64.tar.gz && \
-    echo 'export GOROOT=/opt/go${GOLANGVERSION}/go' >>  /etc/bashrc &&  \
+RUN wget https://go.dev/dl/go1.19.3.linux-amd64.tar.gz && \
+    mkdir go1.19.3 &&  \
+    tar -zxf go1.19.3.linux-amd64.tar.gz -C go1.19.3 && \
+    rm -f go1.19.3.linux-amd64.tar.gz && \
+    echo 'export GOROOT=/opt/go1.19.3/go' >>  /etc/bashrc &&  \
     echo 'export GOPATH=/root/go' >>  /etc/bashrc && \
     echo 'PATH=$PATH:$GOROOT/bin:$GOPATH/bin' >> /etc/bashrc && \
     source /etc/bashrc && \
@@ -83,7 +83,7 @@ RUN wget https://go.dev/dl/go${GOLANGVERSION}.linux-amd64.tar.gz && \
     # openapi
     go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2@latest &&\
     # 安装delve，用于debug go代码
-    go get -u github.com/go-delve/delve/cmd/dlv@latest
+    go install github.com/go-delve/delve/cmd/dlv@latest
 
 # todo java环境
 #COPY jdk-8u351-linux-x64.tar.gz java
