feat(ttyd): ttyd dockerfile

--- a/dockerfiles/tool/ttyd/Dockerfile
+++ b/dockerfiles/tool/ttyd/Dockerfile
@@ -13,15 +13,19 @@ FROM ubuntu:20.04
 
 
 RUN apt-get update && \
+    # 时区设置
     ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     echo 'Asia/Shanghai' >/etc/timezone && \
-    apt-get install -y --no-install-recommends tini wget libjson-c-dev libwebsockets-dev vim && \
-    wget --no-check-certificate https://storage.googleapis.com/kubernetes-release/release/v1.19.16/bin/linux/amd64/kubectl && mv kubectl /usr/bin && chmod +x /usr/bin/kubectl && \
-    apt-get install -y bash-completion && \
+    apt-get install -y --no-install-recommends tini wget libjson-c-dev libwebsockets-dev vim iputils-ping && \
+    wget --no-check-certificate https://storage.googleapis.com/kubernetes-release/release/v1.19.16/bin/linux/amd64/kubectl && mv kubectl /usr/bin && chmod +x /usr/bin/kubectl
+RUN apt-get install -y bash-completion && \
+    # 命令行补全
     echo "source <(kubectl completion bash)" >> ~/.bashrc && \
     echo "source /usr/share/bash-completion/bash_completion" >> ~/.bashrc && \
     echo "source <(kubectl completion bash)" >> /etc/bash.bashrc && \
     echo "source /usr/share/bash-completion/bash_completion" >> /etc/bash.bashrc && \
+    # 颜色提示
+    echo 'PS1="\[\e[37m\][\[\e[32m\]\u\[\e[37m\]@\[\e[35m\]\h\[\e[0m\] \[\e[36m\]\w\[\e[0m\]]\\$ "' >> ~/.bashrc && \
     rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /usr/local/bin/ttyd /usr/bin/ttyd
